# easy-vulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  CTestPresets.json  README.md  compile_commands.json  debug  install  install.sh  ninja  run_test  vulkaninfo.txt
easy-vulkan/: CMakeLists.txt
easy-vulkan/include/: .ev-device.h.swp  .ev-logger.h.swp  .ev-swapchain.h.swp  easy-vulkan.h  ev-buffer.h  ev-command_buffer.h  ev-command_pool.h  ev-commandbuffer.h  ev-commandpool.h  ev-descriptor_set.h  ev-device.h  ev-framebuffer.h  ev-image-view.h  ev-image.h  ev-image_view.h  ev-instance.h  ev-logger.h  ev-macro.h  ev-memory.h  ev-memory_allocator.h  ev-memory_block_metadata.h  ev-pdevice.h  ev-pipeline.h  ev-queue.h  ev-renderpass.h  ev-sampler.h  ev-shader.h  ev-swapchain.h  ev-sync.h  ev-texture.h  ev-utility.h
easy-vulkan/include/debugger/: ev-debug-messenger.h
easy-vulkan/include/initializer/: ev-initializer.h
easy-vulkan/include/presets/: ev-types.h
easy-vulkan/include/tools/: ev-bitmap.h  ev-gltf.h  ev-texture_loader.h  ev-tools.h
easy-vulkan/src/: .ev-gltf.cpp.swp  .ev-instance.cpp.swp  .ev-queue.cpp.swp  ev-buddy_memory_allocator.cpp  ev-buffer.cpp  ev-buffer_memory_barrier.cpp  ev-command_buffer.cpp  ev-command_pool.cpp  ev-commandbuffer.cpp  ev-commandpool.cpp  ev-compute_pipeline.cpp  ev-descriptor_pool.cpp  ev-descriptor_set.cpp  ev-device.cpp  ev-event.cpp  ev-fence.cpp  ev-framebuffer.cpp  ev-gltf.cpp  ev-gltf_model_manager.cpp  ev-graphics_pipeline.cpp  ev-graphics_pipeline_blueprint_manager.cpp  ev-graphics_pipeline_blueprint_manager.cpp.cpp  ev-image-view.cpp  ev-image.cpp  ev-image_memory_barrier.cpp  ev-image_view.cpp  ev-instance.cpp  ev-macro.cpp  ev-memory.cpp  ev-memory_block_deleter.cpp  ev-memory_pool.cpp  ev-pdevice.cpp  ev-pipeline_cache.cpp  ev-pipeline_layout.cpp  ev-queue.cpp  ev-renderpass.cpp  ev-sampler.cpp  ev-sampler_builder.cpp  ev-semaphore.cpp  ev-shader.cpp  (+4 more)
easy-vulkan/src/tools/: ev-gltf_model_manager.cpp
examples/: CMakeLists.txt
examples/base/: example_base.hpp
examples/samples/cube/: main.cpp
examples/samples/gaussian-blur/: main.cpp
examples/samples/gltf-model-loading/: main.cpp
examples/samples/light-cube/: main.cpp
examples/samples/multi-cube/: main.cpp
examples/samples/outline/: main.cpp
examples/samples/phong-shading/: main.cpp
examples/samples/texture-cube/: main.cpp
examples/samples/triangle/: main.cpp
local/: CMakeLists.txt  main.cpp
output/include/: easy-vulkan.h  ev-core.h  ev-device.h  ev-instance.h  ev-swapchain.h
output/include/initializer/: ev-initializer.h
output/lib/: lib-easy-vulkan.1.0.0.dylib  lib-easy-vulkan.1.dylib  lib-easy-vulkan.dylib
resources/: CMakeLists.txt  download_assets.py  resources.json
shaders/: CMakeLists.txt
shaders/cube/: cube.frag  cube.vert
shaders/gaussian-blur/: base.frag  base.vert  blur.comp
shaders/gltf-model-loading/: mesh.frag  mesh.vert
shaders/light-cube/: cube.frag  cube.vert  light-cube.frag  light-cube.vert
shaders/multi-cube/: multi-cube.frag  multi-cube.vert
shaders/outline/: composite.frag  composite.vert  outline.frag  outline.vert  scene.frag  scene.vert
shaders/phong-shading/: sphere.frag  sphere.vert
shaders/texture-cube/: texture-cube.frag  texture-cube.vert
shaders/triangle/: triangle.frag  triangle.vert
test/: CMakeLists.txt
test/test_codes/: .test_image.cpp.swp  .test_shader.cpp.swp  test_buddy_memory_allocator.cpp  test_buffer.cpp  test_command_pool.cpp  test_common.cpp  test_common.h  test_debugger.cpp  test_descriptor_layers.cpp  test_device.cpp  test_event.cpp  test_fence.cpp  test_framebuffer.cpp  test_image.cpp  test_image_view.cpp  test_instance.cpp  test_main.cpp  test_memory.cpp  test_memory_pool.cpp  test_physical_device.cpp  test_pipeline.cpp  test_queue.cpp  test_renderpass.cpp  test_sampler.cpp  test_semaphore.cpp  test_shader.cpp  test_utility.cpp
